tests/paczka1/fuzzy1/52885415.err
Error in line 9: S715 S717 91,5
Error in line 14: oQc1BIMrA S715 263,9
Error in line 19: fx4 S717 45,9
Error in line 13: S715 S715 23,3
Error in line 34: 8KKCLPl S394 76,2
